--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,6 +13,13 @@
   }
 }
 
+/* .carousel-item > div {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; */
+/* } */
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
