--- a/client/src/index.css
+++ b/client/src/index.css
@@ -56,11 +56,21 @@ body {
   font-family: 'Helvetica', 'Times New Roman', Times, serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-style: var(--white);
 }
 
 code {
   font-family: Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.carousel {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: auto;
 }
 
 ::-webkit-scrollbar {
