--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,11 +15,21 @@ code {
     monospace;
 }
 
+.element {
+  text-transform: var(--white);
+  flex: content;
+  flex-direction: column;
+  text-align: center;
+  text-decoration-color: white;
+}
+
 .carousel {
+  border-radius: 50px;
+  margin-top: 100px;
   height: 100%;
+  padding: 200px 0;
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
   justify-content: center;
   margin: auto;
 }
